--- a/app/assets/stylesheets/devise/_forgot_password.scss
+++ b/app/assets/stylesheets/devise/_forgot_password.scss
@@ -1,10 +1,4 @@
-
-$red: #FF204E;
-$black: black;
-$grey: #717171;
-$lightgrey: #E6E5E5;
-
-.login {
+.forgot-password {
   background-image: url("https://images.pexels.com/photos/1884584/pexels-photo-1884584.jpeg?cs=srgb&dl=pexels-bohlemedia-1884584.jpg&fm=jpg");
   background-size: cover;
   background-repeat: no-repeat;
