--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,9 @@
 // Graphical variables
+@import "components/items";
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
+
 
 // External libraries
 @import "bootstrap";
