--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,6 +1,6 @@
-<div class='full-screen-background'>
+<div class='new-item'>
   <div class="form-container">
-    <h1 class="text-center mb-4 red-title">List Your Item</h1>
+    <h1 class="text-center mb-4">List Your Item</h1>
     <%= form_with model: @item, url: items_path, local: true, class: "needs-validation" do |form| %>
       <div class="mb-3">
         <%= form.label :title, "Title", class: "form-label" %>
