--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -17,15 +17,15 @@
     </div>
   </div>
 
-  <div class="rent-card" data-controller="price-calculator">
+  <div class="rent-card" data-controller="price-calculator" data-price-calculator-daily-price-value=<%= @item.price_per_day %>>
     <h2 class="rent-price">$<%= @item.price_per_day %> PER DAY</h2>
 
     <%= form_with url: rent_item_path(@item), method: :post, class: "rent-form" do |f| %>
       <div class="date-range">
-        <label data-price-calculator-target= "startElement" for="start_date">Start Date</label>
-        <%= f.date_field :start_date, id: "start_date", class: "form-control" %>
-        <label data-price-calculator-target= "endElement" for="end_date">End Date</label>
-        <%= f.date_field :end_date, id: "end_date", class: "form-control" %>
+        <label for="start_date">Start Date</label>
+        <%= f.date_field :start_date, id: "start_date", class: "form-control", data: {price_calculator_target: "startElement", action: "input->price-calculator#calculate"} %>
+        <label for="end_date">End Date</label>
+        <%= f.date_field :end_date, id: "end_date", class: "form-control",  data: {price_calculator_target: "endElement", action: "input->price-calculator#calculate"} %>
       </div>
       <%= f.submit "RENT", class: "rent-button" %>
     <% end %>
