--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,13 @@ h3 {
   font-family: "PT Sans";
 }
 
+h4 {
+  font-family: "PT Sans";
+}
+h6 {
+  font-family: "PT Sans";
+}
+
 p {
   font-family: "Hind Madurai";
 }
