--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,40 +1,44 @@
-<div class='new-item'>
-  <div class="form-container">
-    <h1 class="text-center mb-4">List Your Item</h1>
-    <%= form_with model: @item, url: items_path, local: true, class: "needs-validation" do |form| %>
-      <div class="mb-3">
-        <%= form.label :title, "Title", class: "form-label" %>
-        <%= form.text_field :title, class: "form-control", placeholder: "Enter the title" %>
+<div class="new-item">
+<div class="list-item-card">
+  <h1 class="text-center mb-4">List Your Item</h1>
+  <div class="input-container">
+    <%= simple_form_for @item, url: items_path, html: { class: "needs-validation" } do |f| %>
+      <div class="form-inputs">
+        <%= f.input :title,
+                    label: "Title",
+                    input_html: { class: "form-control", placeholder: "Enter the title" } %>
+
+        <%= f.input :category,
+                    collection: ["Trousers", "T-shirts", "Shoes", "Jackets", "Dresses", "Suits"],
+                    label: "Category",
+                    input_html: { class: "form-select" } %>
+
+        <%= f.input :size,
+                    collection: ["XS", "S", "M", "L", "XL"],
+                    label: "Size",
+                    input_html: { class: "form-select" } %>
+
+        <%= f.input :condition,
+                    collection: ["Horrible", "Super", "Amazing", "Mid", "Bad", "Don't know"],
+                    label: "Condition",
+                    input_html: { class: "form-select" } %>
+
+        <%= f.input :price_per_day,
+                    as: :numeric,
+                    label: "Price Per Day (€)",
+                    input_html: { step: 1.0, min: 0, class: "form-control", placeholder: "Enter the price per day" } %>
+
+        <%= f.input :description,
+                    as: :text,
+                    label: "Description (min 30 characters)",
+                    input_html: { class: "form-control", rows: 4, placeholder: "Describe your item" } %>
       </div>
 
-      <div class="mb-3">
-        <%= form.label :category, "Category", class: "form-label" %>
-        <%= form.select :category, ["Trousers", "T-shirts", "Shoes", "Jackets", "Dresses", "Suits"], {}, class: "form-select" %>
-      </div>
-
-      <div class="mb-3">
-        <%= form.label :size, "Size", class: "form-label" %>
-        <%= form.select :size, ["XS", "S", "M", "L", "XL"], {}, class: "form-select" %>
-      </div>
-
-      <div class="mb-3">
-        <%= form.label :condition, "Condition", class: "form-label" %>
-        <%= form.select :condition, ["Horrible", "Super", "Amazing", "Mid", "Bad", "Don't know"], {}, class: "form-select" %>
-      </div>
-
-      <div class="mb-3">
-        <%= form.label :price_per_day, "Price Per Day (€)", class: "form-label" %>
-        <%= form.number_field :price_per_day, step: 1.0, min: 0, class: "form-control", placeholder: "Enter the price per day" %>
-      </div>
-
-      <div class="mb-3">
-        <%= form.label :description, "Description (min 30 characters)", class: "form-label" %>
-        <%= form.text_area :description, class: "form-control", rows: 4, placeholder: "Describe your item" %>
-      </div>
-
-      <div class="text-center">
-        <%= form.submit "Create Item", class: "red-button" %>
+      <div class="form-actions">
+        <%= f.button :submit, "Create Item", class: "btn-red" %>
       </div>
     <% end %>
   </div>
+</div>
+
 </div>
