--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -32,7 +32,14 @@
                     as: :text,
                     label: "Description (min 30 characters)",
                     input_html: { class: "form-control", rows: 4, placeholder: "Describe your item" } %>
+
+        <%= f.input :image,
+                    as: :file,
+                    label: "Upload Images",
+                    input_html: {class: "form-control" } %>
+
       </div>
+
 
       <div class="form-actions">
         <%= f.button :submit, "Create Item", class: "btn-red" %>
