--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -20,7 +20,7 @@
   <div class="rent-card" data-controller="price-calculator" data-price-calculator-daily-price-value=<%= @item.price_per_day %>>
     <h2 class="rent-price">$<%= @item.price_per_day %> PER DAY</h2>
 
-    <%= form_with url: rent_item_path(@item), method: :post, class: "rent-form" do |f| %>
+    <%= form_with url: "#", method: :post, class: "rent-form" do |f| %>
       <div class="date-range">
         <label for="start_date">Start Date</label>
         <%= f.date_field :start_date, id: "start_date", class: "form-control", data: {price_calculator_target: "startElement", action: "input->price-calculator#calculate"} %>
