picture displaying in a 30vh banner in the show

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,10 +1,11 @@
-<div class="container-fluid w-100 h-auto m-0 p-0">
-  <div class="card">
+<div class="img-card">
     <% if @item.image.attached? %>
+      <div class="blurred-bg" style="background-image: url('<%= url_for(@item.image) %>');"></div>
       <%= image_tag @item.image, class: "product-image", alt: "Item Image" %>
     <% else %>
-      <%= image_tag "clothes.jpg", class: "product-image", alt: "Placeholder Image" %> <% end %>
-  </div>
+      <div class="blurred-bg" style="background-image: url('<%= asset_path('clothes.jpg') %>');"></div>
+      <%= image_tag "clothes.jpg", class: "product-image", alt: "Placeholder Image" %>
+    <% end %>
 </div>
 
 
