--- a/app/assets/stylesheets/components/_items.scss
+++ b/app/assets/stylesheets/components/_items.scss
@@ -46,7 +46,6 @@
 
     &:hover {
       background-color: #FF204E;
-      ease:out
     }
   }
 
@@ -105,7 +104,8 @@
 .show-container {
   display: flex;
   justify-content: space-between;
-  gap: 20px;
+  gap: 10px;
+  margin: 10px;
 }
 
 .item-container {
@@ -120,12 +120,34 @@
   border: 1px solid #ddd; /* Optional: border for styling */
 }
 
-.product-image {
-  display: block; // Ensures the image is a block-level element
+.img-card {
+  position: relative;
   width: 100vw; // Full width of the viewport
-  height: auto; // Maintains aspect ratio
-  object-fit: cover; // Ensures the image fills the width without distortion
-  max-height: 400px; // Optional: Limits the height to make it more banner-like
-  margin: 0 auto; // Centers the image horizontally if it's inside a container
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); // Optional: Adds a subtle shadow
+  height: 25vw; // Fixed height for the banner
+  overflow: hidden; // Ensures no content spills outside the card
+
+
+  .blurred-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    filter: blur(15px);
+    transform: scale(1.2);
+    z-index: 1;
+  }
+
+  .product-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: auto;
+    height: 100%;
+    object-fit: cover;
+    z-index: 2;
+  }
 }
