--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,10 +1,10 @@
 <div class="search-container">
   <%= simple_form_for :search, url: root_path, method: "get" do |f| %>
-  <%= f.input :opening_date, as: :string, input_html: { data: { controller: "datepicker" } } %>
-  <%= f.input :ending_date, as: :string, input_html: { data: { controller: "datepicker" } } %>
-  <%= f.input :search %>
-  <%= f.button :submit, "🔍" %>
-<% end %>
+    <%= f.input :opening_date, as: :string, input_html: { data: { controller: "datepicker" } } %>
+    <%= f.input :ending_date, as: :string, input_html: { data: { controller: "datepicker" } } %>
+    <%= f.input :search %>
+    <%= f.button :submit, "🔍" %>
+  <% end %>
 </div>
 
 <h1 class="title">All Items</h1>
@@ -12,16 +12,21 @@
 <div class="items-container">
   <% @items.each do |item| %>
     <div class="All">
-    <%= link_to item_path(item) do %>
-      <div class="item-card">
-        <img src="https://mitorojo.com/wp-content/uploads/2024/04/C-de-1966-rojo_1-copia.jpg" alt="<%= item.title %>" class="item-card-image">
-        <div class="item-card-content">
-          <h4 class="item-title"><%= item.title %></h4>
-          <h6 class="item-description"><%= item.description %></h6>
-          <p class ="item-price-per-day"><%= "#{item.price_per_day} €" %></p>
+      <%= link_to item_path(item) do %>
+        <div class="item-card">
+          <% if item.images.attached? %>
+            <%= image_tag url_for(item.images.first), alt: item.title, class: "item-card-image" %>
+          <% else %>
+            <!-- Default image if no images are attached -->
+            <img src="https://mitorojo.com/wp-content/uploads/2024/04/C-de-1966-rojo_1-copia.jpg" alt="<%= item.title %>" class="item-card-image">
+          <% end %>
+          <div class="item-card-content">
+            <h4 class="item-title"><%= item.title %></h4>
+            <h6 class="item-description"><%= truncate(item.description, length: 100) %></h6>
+            <p class="item-price-per-day"><%= "#{item.price_per_day} € per day" %></p>
+          </div>
         </div>
-      </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   <% end %>
 </div>
