Rent Button done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
     <%= render "shared/navbar" %>
     <%= yield %>
 
-    <% if alert %>
-    <p class="notice"><%= notice %></p>
+    <% if notice %>
+      <p class="notice"><%= notice %></p>
     <% end %>
 
     <% if alert %>
