--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -20,12 +20,13 @@
   <div class="rent-card" data-controller="price-calculator" data-price-calculator-daily-price-value=<%= @item.price_per_day %>>
     <h2 class="rent-price">$<%= @item.price_per_day %> PER DAY</h2>
 
-    <%= form_with url: rent_item_path(@item), method: :post, class: "rent-form" do |f| %>
+    <%= form_with model: Booking.new, url: item_bookings_path(@item), method: :post, class: "rent-form" do |f| %>
       <div class="date-range">
         <label for="start_date">Start Date</label>
         <%= f.date_field :start_date, id: "start_date", class: "form-control", data: {price_calculator_target: "startElement", action: "input->price-calculator#calculate"} %>
         <label for="end_date">End Date</label>
         <%= f.date_field :end_date, id: "end_date", class: "form-control",  data: {price_calculator_target: "endElement", action: "input->price-calculator#calculate"} %>
+        <%= f.hidden_field :total_price, data: {price_calculator_target: "totalPrice"} %>
       </div>
       <%= f.submit "RENT", class: "rent-button" %>
     <% end %>
