--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,16 @@
     <%= yield %>
 
     <% if notice %>
-      <p class="notice"><%= notice %></p>
+      <div class="alert alert-info alert-dismissible fade show m-1" role="alert">
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        <%= notice %>
+      </div>
     <% end %>
-
     <% if alert %>
-      <p class="alert"><%= alert %></p>
+      <div class="alert alert-warning alert-dismissible fade show m-1" role="alert">
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        <%= alert %>
+      </div>
     <% end %>
   </body>
 </html>
-
