--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,6 +25,7 @@
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Profile", profile_user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Dashboard", dashboard_user_path(current_user), class: "dropdown-item" %>
+              <%= link_to "Create a New Item", new_item_path, class: "dropdown-item" %>
               <%= button_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             </div>
           </li>
