--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,17 +6,21 @@
 @import "buttons";
 @import "cards";
 
+body {
+  background-color: #ffffff;
+}
 
 .search-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px;
-  background-color: #E6E5E5;
-  border-radius: 50px;
-  width: 1000px;
+  background-color: #ffffff;
+  width: 800px;
   margin: 10px auto;
   font-weight: bold;
+  border-style: solid;
+  border-color: black;
 }
 .search-container > form {
   align-items: center;
@@ -24,17 +28,14 @@
   margin: auto;
   display: flex;
 
-  input.btn {
-    background-color: #ff204e;
-    align-items: right;
-    margin-left: 50px;
-    color: white;
-    border-radius: 50%;
-    font-weight: bold;
-    font-size: xx-large;
-    width: 75px;
-    height: 75px;
+  button {
+    margin-left: 10px;
+    border-style: none;
+    width: 80px;
+    height: 80px;
+    background-color: #ffffff;
   }
+
 }
 
 .avatar-image {
@@ -49,44 +50,16 @@
   gap: 20px;
   justify-content: center;
   margin: 10px;
-}
-
-.item-card {
-  background-color: #E6E5E5;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  transition: transform 0.3s ease;
-  color: black;
-  text-decoration: none;
-  box-sizing: border-box;
-
+  border-radius: 0px;
 }
 
 .title {
-  margin-left: 10px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 .items-container :hover {
-  background-color: #d2d2d2;
-  border-radius: 10px;
-}
-
-.item-card-content {
-  padding: 15px;
-  text-decoration: none;
-}
-
-.items-container img {
-  border-radius: 10px;
-}
-
-.item-card-image {
-  width: 100%;
-  height: 200px;
-  object-fit: contain;
-  padding: 20px;
-  border-radius: 5px;
+  background-color: #ffffff;
 }
 .item-description {
   text-decoration: none;
@@ -102,9 +75,4 @@
 
 .items-container a {
   text-decoration: none;
-}
-
-.All {
-  text-decoration: none;
-  flex: 1 1 calc(33.333% - 50px);
 }
