--- a/app/assets/stylesheets/components/_items.scss
+++ b/app/assets/stylesheets/components/_items.scss
@@ -1,6 +1,6 @@
 .rent-card {
-  width: 300px;
-  padding: 20px;
+  width: 600px;
+  padding: 50px;
   margin: 0 auto;
   margin-top: 20px;
   background: #E6E5E5;
@@ -9,10 +9,10 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
   .rent-price {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     font-weight: bold;
     margin-bottom: 20px;
-    color: #FF204E;
+    color: #000000;
     text-align: center;
   }
 
@@ -36,6 +36,7 @@
 
   .rent-button {
     width: 100%;
+    margin-bottom: 20px;
     padding: 10px;
     font-size: 1rem;
     color: #fff;
@@ -46,6 +47,7 @@
 
     &:hover {
       background-color: #FF204E;
+      transition-duration: 0.25s;
     }
   }
 
@@ -75,7 +77,6 @@
   margin-top: 20px;
   padding: 20px;
   background-color: #E6E5E5;
-  border: 1px solid #ddd;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
@@ -83,8 +84,9 @@
     margin-top: 20px;
 
     h1 {
-      font-size: 2rem;
-      color: black;
+      font-size: 2.8rem;
+      margin-bottom: 30px;
+      color: #FF204E;
     }
 
     p {
@@ -94,13 +96,18 @@
 
       &.item-price {
         font-weight: bold;
-        color: #FF204E;
+        color: #555;
+        margin-top: 40px;
+        font-size: 1.4rem;
       }
     }
   }
 }
 
-
+.total {
+  color: #FF204E;
+  padding-top: 15px;
+}
 .show-container {
   display: flex;
   justify-content: space-between;
@@ -111,21 +118,21 @@
 .item-container {
   flex: 1;
   padding: 20px;
-  background-color: #f4f4f4; /* Optional: background color */
+  background-color: white;
+  box-shadow: none;
 }
 
 .rent-card {
-  flex: 0 0 500px;
-  background-color: #fff; /* Optional: background color */
-  border: 1px solid #ddd; /* Optional: border for styling */
+  flex: 0 0 550px;
+  background-color: #fff;
+  border: 1px solid #ddd;
 }
 
 .img-card {
   position: relative;
-  width: 100vw; // Full width of the viewport
-  height: 25vw; // Fixed height for the banner
-  overflow: hidden; // Ensures no content spills outside the card
-
+  width: 100vw;
+  height: 25vw;
+  overflow: hidden;
 
   .blurred-bg {
     position: absolute;
