--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -16,7 +16,7 @@
 
     <div class="mt-5">
       <%= link_to "Back to Dashboard", dashboard_user_path(@user), class: "btn btn-primary btn-lg me-2" %>
-      <%= link_to "Back to Home", root_path, class: "btn btn-secondary btn-lg" %>
+      <%= link_to "Back to Home", root_path, class: "btn btn-secondary btn-lg me-2" %>
     </div>
   </div>
 </div>
