--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -69,11 +69,18 @@ body {
   font-weight: bold;
   text-decoration: none;
 }
-.item-price-per-day {
-  color: black;
-  text-decoration: none;
-}
+// .item-price-per-day {
+//   color: black;
+//   text-decoration: none;
+// }
 
 .items-container a {
   text-decoration: none;
+}
+
+.item-card-content p.item-price-per-day {
+  color: #FF204E;
+  text-decoration: none;
+  font-size: 1.2rem;
+  margin-top: 35px;
 }
