--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -18,6 +18,9 @@
       <p class="item-condition"><strong>Condition:</strong> <%= @item.condition %></p>
       <p class="item-description"><%= @item.description %></p>
       <p class="item-price"><strong>Price per day:</strong> $<%= @item.price_per_day %></p>
+      <%= button_to 'Delete Item', item_path(@item), method: :delete,
+    class: "btn btn-danger mt-3",
+    data: { confirm: "Are you sure you want to delete this item?" } %>
     </div>
   </div>
 
