--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -18,9 +18,11 @@
       <p class="item-condition"><strong>Condition:</strong> <%= @item.condition %></p>
       <p class="item-description"><%= @item.description %></p>
       <p class="item-price"><strong>Price per day:</strong> $<%= @item.price_per_day %></p>
+      <% if @item.user == current_user %>
       <%= button_to 'Delete Item', item_path(@item), method: :delete,
     class: "btn btn-danger mt-3",
     data: { confirm: "Are you sure you want to delete this item?" } %>
+      <% end %>
     </div>
   </div>
 
