--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
           </li>
           <li class="nav-item dropdown">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= image_tag current_user.avatar.attached? ? url_for(current_user.avatar) : "https://static-00.iconduck.com/assets.00/person-icon-512x483-d7q8hqj4.png",
+              <%= image_tag current_user.avatar.attached? ? url_for(current_user.avatar) : "icon_2.png",
                   class: "avatar", alt: "User avatar", width: 40, height: 40 %>
             </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
